--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,10 @@
     <string name="app_name">Molkky</string>
     <string name="start">Aloita peli</string>
     <string name="random">Arvo heittojärjestys</string>
-    <string name="addPlayer">Lisää pelaaja</string>
     <string name="insert_player">Anna pelaajan nimi</string>
     <string name="first">%1$s heittää ensimmäisenä.</string>
+    <string name="ok">ok</string>
+    <string name="dash">-</string>
+    <string name="points">%1$d</string>
+    <string name="add">Lisää</string>
 </resources>
