--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,10 @@
     <string name="start">Aloita peli</string>
     <string name="random">Arvo heittojärjestys</string>
     <string name="insert_player">Lisää uusi pelaaja</string>
+    <string name="choose_player">Valitse pelaajat:</string>
     <string name="first">%1$s heittää ensimmäisenä.</string>
+    <string name="no_saved_players">Ei tallennettuja pelaajia.</string>
+    <string name="already_added">%1$s on jo lisätty.</string>
     <string name="ok">OK</string>
     <string name="dash">-</string>
     <string name="add">Lisää</string>
