--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,5 +44,13 @@
     <string name="rules_content">Pisteiden lasku:\n\nYksi kaatunut keila: keilaan merkitty numero\nUseampi kaatunut keila: kaatuneiden keilojen lukumäärä.\nKeilaa ei lasketa kaatuneeksi, jos se nojaa toiseen keilaan tai heittokapulaan.\nKaatuneet keilat nostetaan samaan paikkaan, johon ne ovat kaatuneet.\n\nPelin kulku: \n\nPeli päättyy, kun pelaaja saavuttaa 50 pistettä. Jos 50 pistettä ylittyy, pelaajan pisteet lasketaan 25 pisteeseen. Kolme peräkkäistä nollaa heittänyt pelaaja putoaa pelistä.\n\nHeittolinja: 3-4 metriä muodostelmasta.</string>
     <string name="source">Lähde: https://www.molkky.com/wp/saannot/</string>
     <string name="confirm">Vahvista muutokset</string>
+    <string name="use_cloud_database">Käytä pilvitietokantaa</string>
+    <string name="unable_to_connect">Yhdistäminen pilvitietokantaan epäonnistui.</string>
+    <string name="database_id">Tietokannan tunnus</string>
+    <string name="instructuons">Voit käyttää ystäviesi kanssa yhteistä tietokantaa asettamalla saman tunnuksen.</string>
+    <string name="too_short_id">Virheellinen tunnus</string>
+    <string name="post_to_database_failed">Pelin lisääminen pilvitietokantaan epäonnistui.</string>
+    <string name="database_read_error">Tapahtui virhe lukiessa tietokantaa.</string>
+    <string name="database_not_found">Tietokantaa ei löytynyt.</string>
 
 </resources>
