--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,13 +47,14 @@
     <string name="confirm_changes">Vahvista muutokset</string>
     <string name="use_cloud_database">Käytä pilvitietokantaa</string>
     <string name="database_id">Tietokannan tunnus</string>
-    <string name="instructuons">Voit käyttää ystäviesi kanssa yhteistä tietokantaa asettamalla saman tunnuksen.</string>
+    <string name="instructuons">Voit käyttää ystäviesi kanssa samaa tietokantaa asettamalla yhteisen tunnuksen.</string>
     <string name="too_short_id">Virheellinen tunnus</string>
     <string name="post_to_database_failed">Pelin lisääminen pilvitietokantaan epäonnistui.</string>
-    <string name="database_read_error">Virhe lukiessa tietokantaa. Tarkista internet-yhteys.</string>
+    <string name="database_read_error">Ei yhteyttä tietokantaan. Tarkista internet-yhteys.</string>
     <string name="database_not_found">Tietokantaa ei löytynyt.</string>
     <string name="database_changed">Tietokanta vaihdettu.</string>
     <string name="database_game_added">Peli lisätty tietokantaan</string>
     <string name="database_connected">Yhdistetty tietokantaan.</string>
+    <string name="something_went_wrong">Jokin meni vikaan.</string>
 
 </resources>
