--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="already_added">%1$s on jo lisätty.</string>
     <string name="fetched_from_database">%1$s haettiin tietokannasta.</string>
     <string name="ok">OK</string>
+    <string name="cancel">Peruuta</string>
     <string name="dash">-</string>
     <string name="add">Lisää</string>
     <string name="confirm">Valmis</string>
@@ -69,6 +70,10 @@
     <string name="spectate">Seuraa peliä</string>
     <string name="spectator_mode_start">Pelinseuranta käynnissä.</string>
     <string name="spectator_mode_error">Pelinseuranta ei onnistunut.</string>
+    <string name="move_player_instructions">Vaihda heittojärjestystä painamalla pelaajaa pidempään.</string>
+    <string name="spectate_code_instruction">Aseta pelin koodi.</string>
+    <string name="select_players">Valitse pelaajat</string>
+    <string name="name">nimi</string>
 
 
 </resources>
