fontti jostain syystä ei näy oikein

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,6 @@
     <string name="spectate_instructions">Koodi löytyy pelinäkymän vasemmasta alakulmasta.</string>
     <string name="select_players">Valitse pelaajat</string>
     <string name="name">nimi</string>
-
+    <string name="game_not_found">Peliä ei löytynyt</string>
 
 </resources>
