--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,5 +77,6 @@
     <string name="name">nimi</string>
     <string name="game_not_found">Peliä ei löytynyt</string>
     <string name="signin_failed">Kirjautuminen palvelimelle epäonnistui. Pelien tallennus ei ole käytössä.</string>
+    <string name="livegame_eror">Pelin seuraaminen ei käytössä.</string>
 
 </resources>
