image change dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,5 +81,6 @@
     <string name="change_name">Vaihda nimi</string>
     <string name="save">Tallenna</string>
     <string name="name_already_in_database">Nimi on käytössä</string>
+    <string name="new_picture">Uusi kuva</string>
 
 </resources>
