Update for new SDK

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,7 +43,7 @@
     <string name="show_all_time_stats">kaikkien aikojen tilastot</string>
     <string name="show_games">Näytä pelit</string>
     <string name="chart">kuvaaja</string>
-    <string name="seekbar_instruction">Valitse pisteet liu\'uttamalla kapulaa</string>
+    <string name="seekbar_instruction">Valitse pisteet liu\"uttamalla kapulaa</string>
     <string name="rules">Säännöt</string>
     <string name="show_images">Näytä kuvat</string>
     <string name="hide_images">Piilota kuvat</string>
